--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html style="height: 95%">
 <head>
   <meta charset="utf-8">
   <title>Hockey Statistics</title>
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  </head>
-<body fxLayout="column" class="mat-app-background">
-  <app-root fxLayout="row">Loading...</app-root>
+<body class="mat-app-background" style="height: 100%">
+  <app-root>Loading...</app-root>
 </body>
 </html>
