--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html style="height: 95%">
+
 <head>
   <meta charset="utf-8">
   <title>Hockey Statistics</title>
@@ -8,7 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- </head>
+
+  <script src="../node_modules/chart.js/dist/Chart.bundle.min.js" type="text/javascript"></script>
+</head>
+
 <body class="mat-app-background" style="height: 100%">
   <app-root>Loading...</app-root>
 </body>
