--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <script src="../node_modules/chart.js/dist/Chart.bundle.min.js" type="text/javascript"></script>
+  <!--<script src="../node_modules/chart.js/dist/Chart.bundle.min.js" type="text/javascript"></script>-->
 </head>
 
 <body class="mat-app-background" style="height: 100%">
